updated discovery config

--- a/app-discovery/src/main/resources/application.properties
+++ b/app-discovery/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 
+server.port = 8761
+
 spring.application.name = app-discovery
 
 spring.profiles.active = dev
 
 spring.cloud.loadbalancer.ribbon.enabled = false
+
+eureka.client.register-with-eureka = false
+eureka.client.fetch-registry = false
