--- a/app-gateway/src/main/resources/application.yml
+++ b/app-gateway/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 eureka:
   client:
-    fetch-registry: false
-    register-with-eureka: false
-    service-url:
-      defaultZone: https://localhost:8761
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:      defaultZone: ${EUREKA_URI:https://localhost:8761/eureka}
   instance:
     hostname: localhost
     non-secure-port-enabled: false
@@ -11,8 +10,11 @@ eureka:
     secure-port: ${server.port}
     secure-port-enabled: true
 
+ribbon:
+  eureka:    enabled: true
+
 server:
-  port: 8761
+  port: 8760
   ssl:
     key-alias: localhost
     key-store: classpath:keystore-rsa.jks
@@ -21,6 +23,12 @@ server:
 
 spring:
   application:
-    name: app-discovery
+    name: app-gateway
   profiles:
     active: dev
+
+zuul:
+  ssl-hostname-validation-enabled: false
+  routes:    api:
+      path: /api/**
+      service-id: APP-API
