--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -58,8 +58,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
-      </dependency> -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
     <!-- JWT -->
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
@@ -96,8 +98,11 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-test</artifactId> 
-      <scope>test</scope> </dependency> -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>com.intuit.karate</groupId>
       <artifactId>karate-apache</artifactId>
@@ -116,8 +121,11 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>${springdoc-openapi-ui.version}</version>
     </dependency>
-    <!-- <dependency> <groupId>org.springdoc</groupId> <artifactId>springdoc-openapi-security</artifactId> 
-      <version>${springdoc-openapi-ui.version}</version> </dependency> -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-security</artifactId>
+      <version>${springdoc-openapi-ui.version}</version>
+    </dependency>
     <!-- Optional -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
