--- a/app-api/pom.xml
+++ b/app-api/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
+    <version>2.3.0.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
@@ -22,8 +22,8 @@
     <jjwt.version>0.11.1</jjwt.version>
     <karate.version>0.9.5</karate.version>
     <slf4j-fluent.version>0.13.3</slf4j-fluent.version>
-    <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-    <springdoc-openapi-ui.version>1.3.6</springdoc-openapi-ui.version>
+    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
+    <springdoc-openapi-ui.version>1.3.9</springdoc-openapi-ui.version>
   </properties>
 
   <dependencyManagement>
@@ -61,6 +61,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <!-- JWT -->
     <dependency>
