--- a/app-api/src/main/resources/application.yml
+++ b/app-api/src/main/resources/application.yml
@@ -20,6 +20,7 @@ ribbon:
 
 server:
   port: 8770
+  shutdown: graceful
   ssl:
     key-alias: localhost
     key-store: classpath:keystore-rsa.jks
