--- a/app-gateway/pom.xml
+++ b/app-gateway/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
+    <version>2.3.0.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
@@ -20,7 +20,7 @@
   <properties>
     <java.version>11</java.version>
     <slf4j-fluent.version>0.13.3</slf4j-fluent.version>
-    <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+    <spring-cloud.version>Hoxton.SR4</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -54,6 +54,11 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-properties-migrator</artifactId>
+      <scope>runtime</scope>
     </dependency>
     <!-- caching -->
     <dependency>
