--- a/app-api/src/main/resources/application.yml
+++ b/app-api/src/main/resources/application.yml
@@ -2,7 +2,8 @@ eureka:
   client:
     fetch-registry: true
     register-with-eureka: true
-    service-url:      defaultZone: ${EUREKA_URI:https://localhost:8761/eureka}
+    service-url:
+      defaultZone: ${EUREKA_URI:https://localhost:8761/eureka}
   instance:
     hostname: localhost
     non-secure-port-enabled: false
