--- a/app-discovery/.vscode/settings.json
+++ b/app-discovery/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.checkstyle.configuration": "/google_checks.xml",
   "java.checkstyle.version": "8.27",
-  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml"
+  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
+  "codewindProfiling.showProfiling": false
 }
