--- a/app-gateway/src/test/resources/application-test.yml
+++ b/app-gateway/src/test/resources/application-test.yml
@@ -1,5 +1,12 @@
+eureka:
+  client:
+    enabled: false
+
 spring:
   profiles:
     active: test
+  cloud:
+    discovery:
+      enabled: false
   application:
     name: app-gateway-test
