--- a/app-api/.vscode/launch.json
+++ b/app-api/.vscode/launch.json
@@ -2,7 +2,7 @@
   "configurations": [
     {
       "type": "java",
-      "name": "Spring Boot-Initializer<app-api>",
+      "name": "app-api",
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "console": "internalConsole",
