--- a/app-gateway/src/main/resources/application.yml
+++ b/app-gateway/src/main/resources/application.yml
@@ -1,26 +1,28 @@
 eureka:
   client:
-    fetch-registry: true
+    fetch-registry: false
     register-with-eureka: true
-    service-url:      defaultZone: ${EUREKA_URI:https://localhost:8761/eureka}
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     hostname: localhost
-    non-secure-port-enabled: false
+    # non-secure-port-enabled: false
     prefer-ip-address: false
-    secure-port: ${server.port}
-    secure-port-enabled: true
+    # secure-port: ${server.port}
+    # secure-port-enabled: true
 
 ribbon:
-  eureka:    enabled: true
+  eureka:
+    enabled: true
 
 server:
   port: 8760
   shutdown: graceful
-  ssl:
-    key-alias: localhost
-    key-store: classpath:keystore-rsa.jks
-    key-store-password: localhost
-    key-store-type: JKS
+  # ssl:
+  #   key-alias: localhost
+  #   key-store: classpath:keystore-rsa.jks
+  #   key-store-password: localhost
+  #   key-store-type: JKS
 
 spring:
   application:
@@ -30,8 +32,9 @@ spring:
 
 zuul:
   ssl-hostname-validation-enabled: false
-  routes:    api:
-      path: /api/**
+  routes:
+    api:
+      path: /app/api/**
       service-id: APP-API
       strip-prefix: true
       sensitive-headers:
