--- a/app-sidecar/.vscode/launch.json
+++ b/app-sidecar/.vscode/launch.json
@@ -2,12 +2,12 @@
   "configurations": [
     {
       "type": "java",
-      "name": "app-gateway",
+      "name": "app-sidecar",
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "console": "internalConsole",
       "mainClass": "org.athome.app.Initializer",
-      "projectName": "app-gateway",
+      "projectName": "app-sidecar",
       "vmArgs": "-Djavax.net.ssl.trustStore=C:\\Users\\Pratim\\Certs\\truststore-rsa.jks -Djavax.net.ssl.trustStorePassword=localhost -Djavax.net.ssl.keyStore=C:\\Users\\Pratim\\Certs\\keystore-rsa.jks -Djavax.net.ssl.keyStorePassword=localhost"
     }
   ]
